--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Convergence');
+    </style>
     <title>EventListener</title>
     <%= csrf_meta_tags %>
 
