adjust homepage gif image

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -51,6 +51,7 @@
 
 
 body {
-    background-image: url(homepage_test.gif);
+    background-image: url(http://res.cloudinary.com/dtluc0y85/image/upload/c_scale,h_370,w_615/v1500534602/homepage_test_ltezbc.gif);
     background-size: cover;
+    background-repeat: no-repeat;
 }
