--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -3,12 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-// .login-form-container {
-//   display: flex;
-//   justify-content: center;
-//   margin-top: 100px;
-//   border: solid;
-// }
+.login-form-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  border: solid;
+}
 
 .header-homepage {
   font-family: 'Convergence', sans-serif;
@@ -18,6 +18,22 @@
   color: white;
   font-size: 100px;
 
+}
+
+.header-name {
+  color: white;
+}
+
+.header-button {
+  color: white;
+  background-color: red;
+
+}
+
+.login-input {
+  background-color: white;
+  display: flex;
+  align-self: center;
 }
 
 #login-signup {
