bootstrap current user

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -29,9 +29,9 @@
 }
 
 .header-button {
-  color: white;
-  background-color: red;
-
+  color: black;
+  background-color: white;
+  padding-right: 10px;
 }
 
 .login-input {
