--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,12 @@
 @import 'sessions.scss';
 @import 'users.scss';
 @import 'static_pages.scss';
+
+.login-input {
+  border: none;
+  border-bottom: 2px solid black;
+}
+
+body {
+  font-family: sans-serif;
+}
