--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,7 @@
 @import 'sessions.scss';
 @import 'users.scss';
 @import 'static_pages.scss';
+@import 'events.scss';
 
 .login-input {
   border: none;
