--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -17,3 +17,13 @@
   width: 250px;
   height: 250px;
 }
+
+.event-form-container {
+  border: 2px solid black;
+  padding-top: 100px;
+}
+
+.event-show-container {
+  border: 2px solid black;
+  padding-top: 100px;
+}
