event index images are clickable to its respective show page

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -27,3 +27,13 @@
   border: 2px solid black;
   padding-top: 100px;
 }
+
+.show-page-image {
+  height: 300px;
+  width: 50%;
+}
+
+.event-list-header {
+  display: flex;
+  justify-content: center;
+}
