--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -67,7 +67,7 @@
   background-color: white;
   position: fixed;
   width: 100%;
-
+  z-index: 100;
   .session-link-container {
     height: 36px;
     display: flex;
