--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -59,6 +59,7 @@
 }
 
 #login-signup {
+  border-bottom: 1px solid black;
   font-family: 'Convergence', sans-serif;
   display: flex;
   flex-direction: row;
