--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -59,7 +59,6 @@
 }
 
 #login-signup {
-  border-bottom: 1px solid black;
   font-family: 'Convergence', sans-serif;
   display: flex;
   flex-direction: row;
@@ -69,6 +68,8 @@
   position: fixed;
   width: 100%;
   z-index: 100;
+  box-shadow: 0 4px 6px -2px rgba(22,22,22,0.45);
+
   .session-link-container {
     height: 36px;
     display: flex;
