--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -28,13 +28,30 @@
 
 .event-container-hover:hover {
  background-color: rgba(0,0,0,0.45);
-
 }
 
 .event-form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.create-event-title {
+  border-bottom: 2px solid black;
+  width: 50%;
+}
+
+.create-event-location {
+  border-bottom: 2px solid black;
+  width: 50%;
+}
+
+.create-event-description {
+  border-bottom: 2px solid black;
+  width: 50%;
+}
+
 
 .event-form-container {
   padding-top: 100px;
