success creating event, need to fix image not showing for event after creating event

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,7 @@
 @import 'users.scss';
 @import 'static_pages.scss';
 @import 'events.scss';
+@import 'event_form.scss';
 
 .login-input {
   border: none;
