image uploads to cloudinary and to the index page, and got rid of bug where error in session form page shows when switching between login and signup

--- a/app/assets/stylesheets/event_form.scss
+++ b/app/assets/stylesheets/event_form.scss
@@ -24,6 +24,7 @@
 
 .event-form-container {
   padding-top: 100px;
+
 }
 
 .FileUpload {
@@ -42,8 +43,9 @@
   border: 2px solid black;
 }
 
-.event-field {
-  width: 125px;
-  display: inline-block;
-  margin: 10px;
+.event-field-label {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: black;
+  font-weight: 700;
 }
