--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -63,9 +63,9 @@
   border-radius: 5px;
   margin: 10px auto;
   padding: 5px;
-  background-color: #4ae083;
+  background-color: #2dce6b;
   color: white;
-  width: 160px;
+  width: 200px;
   display: flex;
   justify-content: center;
   font-family: "Montserrat", "Open Sans", "Helvetica Neue";
@@ -74,5 +74,5 @@
 }
 
 .tickets-button:hover {
-  background-color: #01461c;
+  background-color: #00451b;
 }
