--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,6 +3,7 @@
 @import 'static_pages.scss';
 @import 'events.scss';
 @import 'event_form.scss';
+@import 'tickets.scss';
 
 .login-input {
   border: none;
