ticket form in the works

--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -3,6 +3,29 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .ticket-container {
-  margin-top: 200px;
-  border: 2px solid black;
+  margin-top: 10px;
+  // display: flex;
+  // flex-direction: center;
+  // border: 2px solid black;
+}
+
+.modal-ticket-form {
+  // z-index: 10;
+  top: 50%;
+  left: 50%;
+  height: 400px;
+  width: 450px;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: fixed;
+  background-color: white;
+  border-radius: 3px;
+  box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.3);
+  // background-color: rgba(0,0,0, 0.2); rgb(0,0,0)
+  overflow-x: hidden;
+  opacity: 0;
+  animation: myFade 0.5s linear 0.5s ;
+  animation-fill-mode: forwards;
 }
