--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
       @import url('https://fonts.googleapis.com/css?family=Convergence');
 
     </style>
-    <title>EventListener</title>
+    <title>EventListenr</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
