--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -8,10 +8,11 @@
   justify-content: center;
   align-items: center;
   color: #F6682F;
+  cursor: pointer;
 }
 
 .fa:hover {
-  background-color: #EFF2F5;
+  // background-color: #EFF2F5;
 }
 
 .login-form {
