--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,5 +6,12 @@
   border: 2px solid black;
   padding-top: 100px;
   display: flex;
-  
+  align-items: center;
+  justify-content: center;
+}
+
+.ticketed-event-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
