--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,7 @@
 @import 'events.scss';
 @import 'event_form.scss';
 @import 'tickets.scss';
+@import 'bookmarks.scss';
 
 .login-input {
   border: none;
