--- a/app/assets/stylesheets/event_form.scss
+++ b/app/assets/stylesheets/event_form.scss
@@ -1,9 +1,3 @@
-.event-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
 .event-input {
   border: 1px solid black;
@@ -23,9 +17,52 @@
 // }
 
 .event-form-container {
-  padding-top: 100px;
-
+  padding-top: 80px;
 }
+
+#createEventDiv {
+  padding: 20px 50px;
+}
+
+.createEventh3 {
+  font-family: "Benton Sans", "Helvetica Neue", Helvetica, "Roboto", Arial, sans-serif;
+  // font-family: "Convergence", sans-serif;
+  font-size: 1.3em;
+}
+
+.divider {
+  width: 100%;
+  height: 48px;
+  background-color: #45494e;
+}
+
+.event-form {
+  display: flex;
+  flex-direction: column;
+  margin-left: 15%;
+  align-items: center;
+  color: #F8F8FA;
+}
+
+.eventDetailsDiv {
+  padding-top: 20px;
+  font-family: Benton Sans,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,Helvetica,Tahoma,Arial,sans-serif
+}
+
+.numberOne {
+  background-color: #0093D7;
+  color: white;
+  font-size: 35px;
+  line-height: 45px;
+  padding: 2px 13px;
+}
+
+.eventDetails {
+  font-size: 23px;
+  padding-left: 5px;
+  color: #666A73;
+}
+
 
 .FileUpload {
   border: 2px solid black;
