--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -12,5 +12,6 @@
 }
 
 body {
-  font-family: sans-serif;
+  // font-family: sans-serif;
+  // font-family: "Open Sans", "Roboto", helvetica, sans-serif
 }
