add new stylesheet and styling landing page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,7 +1,8 @@
 @import 'sessions.scss';
 @import 'users.scss';
 @import 'static_pages.scss';
-@import 'events.scss';
+@import 'events_index.scss';
+@import 'event_show.scss';
 @import 'event_form.scss';
 @import 'tickets.scss';
 @import 'bookmarks.scss';
