--- a/app/assets/stylesheets/event_show.scss
+++ b/app/assets/stylesheets/event_show.scss
@@ -1,37 +1,3 @@
-// Place all the styles related to the Events controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-//
-.event-index-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.event-container {
-  position: relative;
-  color: black;
-  margin: 20px;
-  width: 325px;
-  height: 400px;
-  box-shadow: 0 3px 8px 2px rgba(22,22,22,0.45);
-}
-
-.event-container-hover {
-  position: absolute;
-  width: 325px;
-  height: 400px;
-  z-index: 20;
-
-}
-
-.event-container-hover:hover {
- background-color: rgba(0,0,0,0.45);
-}
-
-
-
 .event-show-container-outer {
   max-width: 850px;
   margin: auto;
@@ -56,6 +22,10 @@
 .event-list-header {
   display: flex;
   justify-content: center;
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: 200;
+  font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
 }
 
 .description-show-page {
