--- a/app/assets/stylesheets/event_show.scss
+++ b/app/assets/stylesheets/event_show.scss
@@ -34,15 +34,19 @@
 
 .tickets-button {
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 3px;
   margin: 10px auto;
   padding: 5px;
-  background-color: #2dce6b;
+  background-color: #00ab44;
   color: white;
   width: 200px;
+  height:30px;
+  font-size: 13px;
+  letter-spacing: 1px;
   display: flex;
   justify-content: center;
-  font-family: "Montserrat", "Open Sans", "Helvetica Neue";
+  font-family: Benton Sans,-apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, Helvetica, Tahoma, Arial, sans-serif;
+  // font-family: "Montserrat", "Open Sans", "Helvetica Neue";
   font-weight: 100;
   box-shadow: 0 4px 6px -2px rgba(22,22,22,0.45);
 }
