--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -13,3 +13,13 @@
   justify-content: center;
   align-items: center;
 }
+
+.bookmark-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fa-bookmark, .fa-bookmark-o {
+  font-size: 25px;
+}
