--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -18,6 +18,11 @@
   margin: 20px;
 }
 
+.ticket-modal-header {
+  font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
+
+}
+
 .ticket-quantity-selector {
   max-width: 100%;
   width: 80px;
