style event_show

--- a/app/assets/stylesheets/event_show.scss
+++ b/app/assets/stylesheets/event_show.scss
@@ -85,7 +85,8 @@
 
 .description-show-page {
   margin: 0 30px 30px 110px;
-  max-width: 575px;
+  // max-width: 575px;
+  max-width: 45%;
 }
 
 .event-show-headers {
