add hover dropdown feature in navbar, refactor navbar styling

--- a/app/assets/stylesheets/event_form.scss
+++ b/app/assets/stylesheets/event_form.scss
@@ -3,7 +3,7 @@
 }
 
 #createEventDiv {
-  padding: 20px 50px;
+  padding: 23px 50px 37px 25px;
 }
 
 .createEventh3 {
@@ -12,6 +12,7 @@
   font-size: 1.3em;
   font-weight: 300;
   color: #4E5159;
+  letter-spacing: 1px;
 }
 
 .divider {
