--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,20 +1,20 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.fa {
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #F6682F;
-  cursor: pointer;
-  // padding: 5px;
-}
-
-.fa:hover {
-  // background-color: #EFF2F5;
-}
+//
+// .fa {
+//   font-size: 20px;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   color: #F6682F;
+//   cursor: pointer;
+//   // padding: 5px;
+// }
+//
+// .fa:hover {
+//   // background-color: #EFF2F5;
+// }
 
 .login-form {
   text-align: center;
